--- a/skavaForum/src/Components/Header.css
+++ b/skavaForum/src/Components/Header.css
@@ -120,3 +120,10 @@ html , body , #root{
   color: #003a70;
   cursor: pointer;
 }
+#errordom
+{
+  padding: 20px 0px 15px 0px;
+  color: #FF0000;
+  display: none;
+  font-size: 14px;
+}
