--- a/skavaForum/src/Components/PostQuestion.css
+++ b/skavaForum/src/Components/PostQuestion.css
@@ -48,3 +48,53 @@
   color: black;
   border-radius: 5px;
 }
+.cls_postQuestion {
+  position: absolute;
+  top: 150px;
+  left: 100px;
+}
+.pageTitle {
+  color: black;
+  font-size: 25px;
+  margin-bottom: 30px;
+}
+.Quescontainer {
+  color: black;
+  font-size: 15px;
+  font-weight: bold;
+}
+.parentDiv {
+  padding-bottom: 20px;
+}
+.titleDiv {
+  margin-bottom: 15px;
+}
+.askTitle {
+  padding: 5px 0px 5px 5px;
+  width: calc(100% - 20px);
+  margin-left: 20px;
+  box-sizing: border-box;
+}
+.description {
+  margin-left: 20px;
+  resize: none;
+}
+.tagButton {
+  margin-right: 10px;
+  border: 1px solid #ccc;
+  color: black;
+}
+/*.cls_tagButton {
+  margin-left: 20px;
+}*/
+.tagInput {
+  padding: 5px;
+  width: 80%;
+  margin-left: 20px;
+}
+.newTagButton {
+  margin-left: 10px;
+  background-color: darkgrey;
+  color: black;
+  border-radius: 5px;
+}
