--- a/skavaForum/src/Components/Qapage.css
+++ b/skavaForum/src/Components/Qapage.css
@@ -3,7 +3,7 @@
     max-width: 75%;
     float: left;
     height: 100%;
-    border-right: 1px solid #003a70;
+    border-right: 2px solid #003a70;
 }
 .qaContainer .qtitle , .qDescription
 {
@@ -20,14 +20,6 @@
 {
     border-bottom: 1px solid #e4e6e8;
 }
-.tags div
-{
-    float: left;
-    margin-right: 10px;
-    color: #33658a;
-    background-color: #cee0ed;
-    text-align: center;
-}
 .rightcontent
 {
     display: inline-block;
@@ -40,7 +32,7 @@
     display: inline-block;
     margin-left:15px;
 }
-.content > div
+.qpageTopContainer
 {
     height: 100%;
     display: inline-block;
@@ -89,7 +81,7 @@
 {
     margin-bottom: 10px;
 }
-.description
+.qpageTopContainer .description
 {
     max-width: 75%;
 }
