--- a/skavaForum/src/Components/Header.css
+++ b/skavaForum/src/Components/Header.css
@@ -104,7 +104,7 @@ html , body , #root{
   margin-top: 10px;
   cursor: pointer;
 } 
-.createaccnt_container , .backtoLogin , .forgot_pwd
+.createaccnt_container , .backtoLogin , .forgot_pwd 
 {
   width: 100%;
   font-weight: 400;
@@ -153,59 +153,22 @@ html , body , #root{
   color: white;
   text-decoration: none;
 }
-/*post Question Page CSS - starts*/
-.cls_postQuestion{
-  position: absolute;
-  top: 150px;
-  left: 100px;  
-}
-.pageTitle{
-  color: black;
-  font-size: 25px;
-  margin-bottom: 30px;
-}
-.Quescontainer{
-  color: black;
-  font-size: 15px;
-  font-weight: bold;
-}
-.parentDiv{
-  padding-bottom: 20px;
-}
-.titleDiv{
-  margin-bottom: 15px;
-}
-.askTitle{
-  padding: 5px;
-  width: 90%;
-  margin-left: 20px;
-}
-.description{
-  margin-left: 20px;
-  resize: none;
-}
-.tagButton{
-  margin-right: 10px;
-  border: 1px solid #ccc;
-  color: black;
-}
-.cls_tagButton{
-  margin-left: 20px;
-}
-.tagInput{
-  padding: 5px;
-  width: 80%;
-  margin-left: 20px;
-}
-.newTagButton{
-  margin-left: 10px;
-  background-color: darkgrey;
-  color: black;
-  border-radius: 5px;
-}
+
 .content{
   position: absolute;
   top: 85px;
   padding: 40px;
   width: 95%;
+}
+.tagsBackground
+{
+    float: left;
+    margin-right: 10px;
+    text-align: center;
+    box-shadow: 0px 1px 1px 2px #fff;
+    background: #cee0ed;
+    color: #33658a;
+    padding: 2px;
+    box-sizing: border-box;
+    text-transform: capitalize;
 }
