--- a/skavaForum/src/Components/Home.css
+++ b/skavaForum/src/Components/Home.css
@@ -64,3 +64,27 @@
 {
     text-transform: capitalize;
 }
+.pageList {
+    display: inline-block;
+    padding: 4px 8px;
+    font-size: 12px;
+    color: #848d95;
+    border: 1px solid #e4e6e8;
+    border-radius: 3px;
+    background-color: transparent;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.pageList:hover, .pageList.currPage {
+    color: #FFF;
+    background-color: #003a70;
+    border-color: transparent;
+}
+.paginationContainer {
+    margin: 20px;
+}
+/* added commonly */
+button.postQuestion , #post_submitbtn
+{
+    margin-left: 20px;
+}
