--- a/skavaForum/src/Components/Header.css
+++ b/skavaForum/src/Components/Header.css
@@ -17,7 +17,7 @@ html , body , #root{
 }
 .h-image-icon
 {
-  width: 186px;
+  width: 150px;
   height: 81px;
   background-size: 0px -15px;
   background-repeat: no-repeat;
@@ -230,4 +230,13 @@ html , body , #root{
 .posFixed
 {
   position:fixed;
+}
+.header_container {
+  max-width: 1200px;
+  height: 84px;
+  margin: auto;
+}
+.homePage {
+  max-width: 1200px;
+  margin: auto;
 }
