--- a/skavaForum/src/Components/Home.css
+++ b/skavaForum/src/Components/Home.css
@@ -74,6 +74,7 @@
     background-color: transparent;
     margin-right: 5px;
     cursor: pointer;
+    text-decoration: none;
 }
 .pageList:hover, .pageList.currPage {
     color: #FFF;
