--- a/skavaForum/src/Components/PostQuestion.css
+++ b/skavaForum/src/Components/PostQuestion.css
@@ -24,7 +24,44 @@
 .tagButton {
   margin-right: 10px;
   border: 1px solid #ccc;
-  color: black;
+  color: #39739d;
+  background-color: #E1ECF4;
+  border-color: #E1ECF4;
+  position: relative;
+  display: inline-block;
+  padding: .4em .5em;
+  font-size: 13px;
+  text-align: center;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 3px;
+}
+.deleteTag {
+  width: 14px;
+  height: 14px;
+  vertical-align: middle;
+  display: inline-block;
+  cursor: pointer;
+  margin-left: 8px;
+  position: relative;
+  opacity: 0.3;
+
+}
+.deleteTag:before, .deleteTag:after {
+  position: absolute;
+  content: ' ';
+  height: 12px;
+  width: 2px;
+  background-color: #39739d;
+}
+.deleteTag:before {
+  transform: rotate(45deg);
+}
+.deleteTag:after {
+  transform: rotate(-45deg);
+}
+.deleteTag:hover{
+  opacity: 1;
 }
 /*.cls_tagButton {
   margin-left: 20px;
